added scroll functionality

--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,7 @@
             <a href = "#" class = "logo">Brand
             <img src = "./assets/images/logo-light.svg" width = "74" height = "24" alt = "Brand Logo" class = "logo-light">
             
-            <img src = "./assets/images/logo-dark.svg" width = "74" height = "24" alt = "Brand Logo" class = "logo-dark"> </a>
+            <img src = "./assets/imageslogo-dark.svg" width = "74" height = "24" alt = "Brand Logo" class = "logo-dark"> </a>
             
             <nav class="navbar " data-navbar>
 
@@ -131,7 +131,7 @@
     <article> 
     <!--- Hero Section --->
 
-    <secction class="section hero has-bg-image" aria-label="home" style="background-image: url('assets/images/hero-bg.jpg')">
+    <section class="section hero has-bg-image" aria-label="home" style="background-image: url('assets/images/hero-bg.jpg')">
         <div class="container">
 
             <div class="hero-content">
@@ -183,7 +183,7 @@
                 <ion-icon name = "arrow-back" ></ion-icon>
             </button>
 
-            <button class="slider-btn next" aria-label="next slide" data-slider-prev>
+            <button class="slider-btn next" aria-label="next slide" data-slider-next>
                 <ion-icon name = "arrow-forward" ></ion-icon>
             </button> 
 
