changed slider image functionality

--- a/site/index.html
+++ b/site/index.html
@@ -131,7 +131,7 @@
     <article> 
     <!--- Hero Section --->
 
-    <section class="section hero has-bg-image" aria-label="home" style="background-image: url('assets/images/hero-bg.jpg')">
+    <section class="section hero " aria-label="home" >
         <div class="container">
 
             <div class="hero-content">
@@ -149,7 +149,7 @@
 
             <div class="slider-innner" > 
                 <ul class = "slider-container" data-slider-container>
-                    <li class = "slider-item" data-slider-item>
+                    <li class = "slider-item">
 
                     <figure class = "img-holder" style="--width: 575 ; --height: 550 ;">
                         <img src = "./assets/images/hero-slide-1.jpg" width="575" height="550" alt = "" class="img-cover">
@@ -157,6 +157,7 @@
                     </li>
 
                     <li class = "slider-item" >
+
                     <div class = "hero-card">
                     <figure class = "img-holder" style="--width: 575 ; --height: 550 ;">
                         <img src = "./assets/images/hero-slide-2.jpg" width="575" height="550" alt = "hero banner" class="img-cover">
@@ -166,6 +167,7 @@
                         <ion-icon name = "play-outline" aria-hidden="true"></ion-icon>
                     </button>
                  </div>
+
                 </li>
 
                 <li class = "slider-item" >
@@ -173,11 +175,9 @@
                         <img src = "./assets/images/hero-slide-3.jpg" width="575" height="550" alt = "hero banner" class="img-cover">
                     </figure>
                 </li>
-
-
-
                 </ul>
             </div>
+
 
             <button class="slider-btn prev" aria-label="previous slide" data-slider-prev>
                 <ion-icon name = "arrow-back" ></ion-icon>
@@ -186,14 +186,9 @@
             <button class="slider-btn next" aria-label="next slide" data-slider-next>
                 <ion-icon name = "arrow-forward" ></ion-icon>
             </button> 
-
-
+        </div>
     </div>
-
-    </secction>
-
-
-    
+    </section>
     </article>
     </main>
 
