Added service section , changed color scheme

--- a/site/index.html
+++ b/site/index.html
@@ -189,6 +189,74 @@
         </div>
     </div>
     </section>
+
+
+    <!--- Service Section --->
+    <section class="section service" id="services" aria-label="service-label">
+        <div class = "container">
+            <p class = "section-subtitle" id = "service-label">We provide the best services for your business</p>
+            <h2 class = "h2 section-title">Our Services</h2>
+            <ul class = "grid-list">
+                <li> 
+                    <div class = "service-card">
+                        <div class = "card-icon">
+                            <ion-icon name = "construct-outline" aria-hidden="true"></ion-icon>
+                    </div>
+
+                    <h3 class = "h4 card-title">Fast Service</h3>
+
+                    <p class = "card-text">We provide fast and reliable service for your business</p>
+
+                    <a href = "#" class = "btn-text">
+                        <span class = "span">Learn More</span>
+                    <ion-icon name = "arrow-forward-outline" aria-hidden="true"></ion-icon>
+                    </a>
+
+
+                    </div>
+                </li>
+
+                <li> 
+                    <div class = "service-card">
+                        <div class = "card-icon">
+                            <ion-icon name = "shield-checkmark-outline" aria-hidden="true"></ion-icon>
+                    </div>
+
+                    <h3 class = "h4 card-title">Safe and Secure Payment</h3>
+                    <p class = "card-text">We provide safe and secure payment for your business</p>
+
+                    <a href = "#" class = "btn-text">
+                        <span class = "span">Learn More</span>
+                    <ion-icon name = "arrow-forward-outline" aria-hidden="true"></ion-icon>
+                    </a>
+
+
+                    </div>
+                </li> 
+
+                <li> 
+                    <div class = "service-card">
+                        <div class = "card-icon">
+                            <ion-icon name = "people-outline" aria-hidden="true"></ion-icon>
+                    </div>
+
+                    <h3 class = "h4 card-title">Customer Support</h3>
+                    <p class = "card-text">We provide 24/7 customer support for your business</p>
+
+                    <a href = "#" class = "btn-text">
+                        <span class = "span">Learn More</span>
+                    <ion-icon name = "arrow-forward-outline" aria-hidden="true"></ion-icon>
+                    </a>
+                    </div>
+                </li>
+
+
+            </ul>
+           
+        </div>
+    </section>
+    
+
     </article>
     </main>
 
