added call now button

--- a/site/index.html
+++ b/site/index.html
@@ -313,6 +313,20 @@
         </div>
         </div>
     </section>
+
+
+    <!--- CallNow Section --->
+
+    <section class = "cta" aria-label ="cta">
+    <div class = "container">
+       
+            <h2 class = "h2 section-title">Contact Now</h2>
+           <a href = "#" class = "btn btn-primary">Contact</a>
+
+            </div>
+            </section>
+
+
     </article>
     </main>
 
