--- a/site/index.html
+++ b/site/index.html
@@ -372,7 +372,6 @@
 
             </div>
 
-
             <ul class="footer-list">
 
               <li> 
@@ -388,6 +387,28 @@
                     <a href = "tel:+1234567890" class = "footer-link">+1234567890</a>
                 </li>
             </ul>
+
+        <ul class="footer-list">
+            <li> 
+                <p class = "h4 footer-list-title">LearnMore</p>
+            </li>
+
+            <li>
+                <a href = "#" class = "footer-link">About</a>
+
+            </li>
+
+            <li>
+                <a href = "#" class = "footer-link">Services</a>
+
+            </li>
+
+            <li>
+                <a href = "#" class = "footer-link">Contact</a>
+
+            </li>
+
+        </ul>
 
         </div>
     </footer>
