--- a/site/index.html
+++ b/site/index.html
@@ -257,7 +257,7 @@
     </section>
 
     <!--- About Section --->
-    <section class="section about" aria-label="about-label">
+    <section class="about" aria-label="about-label">
         <div class = "container">
         <figure class = "about-banner">
             <img src = "./assets/images/about-banner.png" width = "800" height = "500" loading = "lazy" alt = "about banner" class = "w-100">
